Use CSS styling to give appropriate numbering schemes at differnet levels
Please check this, as I can't preview

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,8 +19,12 @@
 	 overflow-y: scroll;
  }
 
- #terms ul li {
-   list-style-type: none;
+ #terms ol li ol li {
+   list-style-type: lower-alpha;
+ }
+ 
+ #terms ol li ol li ol li {
+   list-style-type: lower-roman;
  }
  
  #terms h5 {
