--- a/app/views/devise/registrations/_terms.html.erb
+++ b/app/views/devise/registrations/_terms.html.erb
@@ -15,12 +15,12 @@
      in and shall form part of this Agreement.
   </li>
   <li>All notices or other communications to or upon either party shall be in email and writing to
-    <ul>
-      <li>a. ODI: 3rd Floor, 65 Clifton Street, London, EC2A 4JE and <a href='mailto:members@theodi.org'>members@theodi.org</a>.
+    <ol>
+      <li>ODI: 3rd Floor, 65 Clifton Street, London, EC2A 4JE and <a href='mailto:members@theodi.org'>members@theodi.org</a>.
       </li>
-      <li>b. Member: email address registered on their account
+      <li>Member: email address registered on their account
       </li>
-    </ul>
+    </ol>
   </li>
   <li>Member warrants and undertakes that it is and will, throughout the period of its membership, 
     remain in compliance with the eligibility criteria for its category of membership as set out in 
@@ -50,16 +50,16 @@
   </li>
   <li>Membership subscription of the ODI is open to organisations in one of the following membership 
     categories:
-    <ul>
-      <li>a. Partner
+    <ol>
+      <li>Partner
       </li>
-      <li>b. Sponsor
+      <li>Sponsor
       </li>
-      <li>c. Member
+      <li>Member
       </li>
-      <li>d. Supporter
+      <li>Supporter
       </li>
-    </ul>
+    </ol>
   </li>
   <li>Individuals may become members in either the Member or Supporter categories of membership.
   </li>
@@ -84,16 +84,16 @@
     renewal date.
   </li>
   <li>The current membership fees are as follows:
-    <ul>
-      <li>a. Partner: £50,000 per annum of which up to £15,000 per annum may be payment in kind
+    <ol>
+      <li>Partner: £50,000 per annum of which up to £15,000 per annum may be payment in kind
       </li>
-      <li>b. Sponsor: £25,000 per annum of which up to £7,500 may be payment in kind
+      <li>Sponsor: £25,000 per annum of which up to £7,500 may be payment in kind
       </li>
-      <li>c. Member: £4,800 per annum
+      <li>Member: £4,800 per annum
       </li>
-      <li>d. Supporter: £540 per annum
+      <li>Supporter: £540 per annum
       </li>
-    </ul>
+    </ol>
   </li>
   <li>Payments in kind may be through the contribution of services, technology or other expertise as 
     agreed and valued in advance with ODI.
@@ -124,16 +124,16 @@
       on professional services contracts entered into with ODI during their membership subject to 
       the following limits:
     </p>
-    <ul>
-      <li>a. Supporter - Maximum of 12 training courses, Professional Services to the value of £10,000
+    <ol>
+      <li>Supporter - Maximum of 12 training courses, Professional Services to the value of £10,000
       </li>
-      <li>b. Member - Professional Services to the value of £50,000
+      <li>Member - Professional Services to the value of £50,000
       </li>
-      <li>c. Sponsor - Professional Services to the value of £100,000
+      <li>Sponsor - Professional Services to the value of £100,000
       </li>
-      <li>d. Partner - Unlimited
+      <li>Partner - Unlimited
       </li>
-    </ul>
+    </ol>
   </li>
 </ol>
 <h5>
@@ -159,34 +159,34 @@
     <p>
       All members shall be entitled to Brand Placement and Recognition as follows:
     </p>
-    <ul>
-      <li>a. Partners:
-        <ul>
-          <li>i. Partner names and logos shall be displayed on the ODI website.
+    <ol>
+      <li>Partners:
+        <ol>
+          <li>Partner names and logos shall be displayed on the ODI website.
           </li>
-          <li>ii. Partner will be entitled to headline (on a non-exclusive basis) with the ODI Annual Summit.
+          <li>Partner will be entitled to headline (on a non-exclusive basis) with the ODI Annual Summit.
           </li>
-          <li>iii. Partner shall be responsible for providing appropriate event branding collateral.
+          <li>Partner shall be responsible for providing appropriate event branding collateral.
           </li>
-        </ul>
+        </ol>
       </li>
-      <li>b. Sponsors: names and logos shall be displayed on the ODI website and at ODI networking events. 
+      <li>Sponsors: names and logos shall be displayed on the ODI website and at ODI networking events. 
         Sponsors shall be responsible for providing appropriate branding collateral
       </li>
-      <li>c. Members names and logos shall be displayed on the ODI website
+      <li>Members names and logos shall be displayed on the ODI website
       </li>
-      <li>d. Supporters names shall be displayed as text on the ODI website
+      <li>Supporters names shall be displayed as text on the ODI website
       </li>
-      <li>e. Branding opportunities with the Open Data Institute associated events during the membership term 
+      <li>Branding opportunities with the Open Data Institute associated events during the membership term 
         at the discretion of ODI. Events are generally associated to sectors and as such will attract relevant 
         interested attendees.
       </li>
-      <li>f. Subject to the approval of the ODI Board, Partners shall be entitled to one representative on the 
+      <li>Subject to the approval of the ODI Board, Partners shall be entitled to one representative on the 
         Sector Pioneers Board to which ODI may appoint other representatives from industry, public sector 
         and the SME, not for profit/charity and start-up communities. Sector Pioneers lead and inform the 
         debate on open data within their respective industries, meet on a quarterly basis and provide input
       </li>
-    </ul>
+    </ol>
   </li>
 </ol>
 <h5>
@@ -195,61 +195,61 @@
 <ol start='7'>
   <li>All organisation members shall be entitled to attend the ODI Annual Summit at no charge (the event 
     is limited to circa 200 attendees and is chargeable to non members) as follows:
-    <ul>
-      <li>a. Partners may send up to 3 attendees
+    <ol>
+      <li>Partners may send up to 3 attendees
       </li>
-      <li>b. Sponsors may send up to 2 attendees, and nominate up to 1 speaker
+      <li>Sponsors may send up to 2 attendees, and nominate up to 1 speaker
       </li>
-      <li>c. Members and Supporter organisations may send 1 attendee
+      <li>Members and Supporter organisations may send 1 attendee
       </li>
-      <li>d. All persons attending on behalf of an organisations member must be a director and/ or an 
+      <li>All persons attending on behalf of an organisations member must be a director and/ or an 
         employee of the organisation
       </li>
-      <li>e. Individual members may attend in person; they may not send a representative
+      <li>Individual members may attend in person; they may not send a representative
       </li>
-    </ul>
+    </ol>
   </li>
   <li>All members shall be entitled to attend ODI open data bi-annual ODI networking evenings as follows:
-    <ul>
-      <li>a. Partners may send 3 attendees and shall be entitled to brand as a Platinum Sponsor
+    <ol>
+      <li>Partners may send 3 attendees and shall be entitled to brand as a Platinum Sponsor
       </li>
-      <li>b. Sponsors may send 2 attendees and shall be entitled to brand as a Sponsor
+      <li>Sponsors may send 2 attendees and shall be entitled to brand as a Sponsor
       </li>
-      <li>c. Members and Supporters may send 1 attendee
+      <li>Members and Supporters may send 1 attendee
       </li>
-    </ul>
+    </ol>
   </li>
   <li>The following conditions shall apply:
-    <ul>
-      <li>a. All persons attending on behalf of an organisations member must be a director and/ or an 
+    <ol>
+      <li>All persons attending on behalf of an organisations member must be a director and/ or an 
         employee of the organisation
       </li>
-      <li>b. Individual members may attend in person; they may not send a representative
+      <li>Individual members may attend in person; they may not send a representative
       </li>
-    </ul>
+    </ol>
   </li>
   <li>All members shall be entitled to <strong>free</strong> use of ODI desk space and ODI meeting rooms 
     in accordance with the current ODI Facilities Policy as follows:
-    <ul>
-      <li>a. Partners may use ODI desk space on up to 36 visits (a visit constitutes 3hrs of working time 
+    <ol>
+      <li>Partners may use ODI desk space on up to 36 visits (a visit constitutes 3hrs of working time 
         max during a day) per year and may use ODI meeting rooms for up to 18 hours per year
       </li>
-      <li>b. Sponsors may use ODI desk space on up to 12 visits per year and may use ODI meeting rooms for
+      <li>Sponsors may use ODI desk space on up to 12 visits per year and may use ODI meeting rooms for
         up to 6 hours per year
       </li>
-      <li>c. Members may use ODI desk space on up to 6 visits per year and may use ODI meeting rooms for up 
+      <li>Members may use ODI desk space on up to 6 visits per year and may use ODI meeting rooms for up 
         to 3 hours per year
       </li>
-      <li>d. Supporters may request use of ODI desk space and ODI meeting rooms entirely at the discretion 
+      <li>Supporters may request use of ODI desk space and ODI meeting rooms entirely at the discretion 
         of ODI.
       </li>
-      <li>e. Use of ODI desk space and ODI meeting rooms is subject to availability. Free use of ODI meeting 
+      <li>Use of ODI desk space and ODI meeting rooms is subject to availability. Free use of ODI meeting 
         rooms shall be restricted to ODI pods but larger rooms may be booked at charges published on the ODI website.
       </li>
-      <li>f. The use of desk space and other membership benefits is subject to receipt of payment in full for 
+      <li>The use of desk space and other membership benefits is subject to receipt of payment in full for 
         membership.
       </li>
-    </ul>
+    </ol>
   </li>
 </ol>
 <h4>
@@ -258,53 +258,53 @@
 <ol>
   <li>Without prejudice to any other rights or remedies which the parties may have, ODI <strong>may</strong> 
     terminate any membership if:
-    <ul>
-      <li>a. a member fails to pay any membership fees within 30 days of the invoice date;
+    <ol>
+      <li>a member fails to pay any membership fees within 30 days of the invoice date;
       </li>
-      <li>b. if a member is involved in any regulatory actions, civil or criminal proceedings or any other 
+      <li>if a member is involved in any regulatory actions, civil or criminal proceedings or any other 
         acts or omissions as a consequence of which the member's continued membership may, in the sole opinion 
         of ODI, be prejudicial to ODI or bring ODI into disrepute;
       </li>
-      <li>c. a member suspends, or threatens to suspend, payment of its debts, is unable to pay its debts as 
+      <li>a member suspends, or threatens to suspend, payment of its debts, is unable to pay its debts as 
         they fall due, admits inability to pay its debts or (being a company) is deemed unable to pay its debts 
         within the meaning of section 123 of the Insolvency Act 1986 or (being a natural person) is deemed either 
         unable to pay its debts or as having no reasonable prospect of so doing, in either case, within the 
         meaning of section 268 of the Insolvency Act 1986 or (being a partnership) has any partner to whom any 
         of the foregoing apply; or
       </li>
-      <li>d. any event occurs, or proceeding is taken, with respect to a member in any jurisdiction to which it 
+      <li>any event occurs, or proceeding is taken, with respect to a member in any jurisdiction to which it 
         is subject that has an effect equivalent or similar to any of the events mentioned in the previous 
         clause; or
       </li>
-      <li>e. a member suspends or ceases, or threatens to suspend or cease, to carry on all or a substantial 
+      <li>a member suspends or ceases, or threatens to suspend or cease, to carry on all or a substantial 
         part of its business; or
       </li>
-      <li>f. there is a change of control of a member (as defined in section 574 of the Capital Allowances Act 2001).
+      <li>there is a change of control of a member (as defined in section 574 of the Capital Allowances Act 2001).
       </li>
-    </ul>
+    </ol>
   </li>
   <li>Without prejudice to any other rights or remedies which the parties may have, the Member may terminate 
     the Agreement:
-    <ul>
-      <li>a. if the ODI is involved in any regulatory actions, civil or criminal proceedings or any other 
+    <ol>
+      <li>if the ODI is involved in any regulatory actions, civil or criminal proceedings or any other 
         acts or omissions as a consequence of which Member’s continued membership of the ODI organisation 
         may, in the sole opinion of Member, be prejudicial to Member or bring Member into disrepute;
       </li>
-      <li>b. the ODI suspends, or threatens to suspend, payment of its debts, is unable to pay its debts as 
+      <li>the ODI suspends, or threatens to suspend, payment of its debts, is unable to pay its debts as 
         they fall due, admits inability to pay its debts or (being a company) is deemed unable to pay its 
         debts within the meaning of section 123 of the Insolvency Act 1986; or
       </li>
-      <li>c. any event occurs, or proceeding is taken, with respect to the ODI in any jurisdiction to which 
+      <li>any event occurs, or proceeding is taken, with respect to the ODI in any jurisdiction to which 
         it is subject that has an effect equivalent or similar to any of the events mentioned in clause above; 
         or
       </li>
-      <li>d. the ODI suspends or ceases, or threatens to suspend or cease, to carry on all or a substantial 
+      <li>the ODI suspends or ceases, or threatens to suspend or cease, to carry on all or a substantial 
         part of its business; or
       </li>
-      <li>e. 12 months after the original membership date or any anniversary thereafter by giving not less 
+      <li>12 months after the original membership date or any anniversary thereafter by giving not less 
         than 30 days notice, such notice to expire on the relevant anniversary of the original membership date.
       </li>
-    </ul>
+    </ol>
   </li>
 </ol>
 <h4>
@@ -312,22 +312,22 @@
 </h4>
 <ol>
   <li>On termination of membership for any reason:
-    <ul>
-      <li>a. the member in question shall immediately pay ODI any sums owing to it as at the date of termination
+    <ol>
+      <li>the member in question shall immediately pay ODI any sums owing to it as at the date of termination
       </li>
-      <li>b. the member in question shall within 7 working days of termination ensure that any reference to 
+      <li>the member in question shall within 7 working days of termination ensure that any reference to 
         ODI, of the member in question 's membership of it together with any of ODI's trade marks, are removed 
         from all advertising and promotional materials, websites, stationery and other materials of the member 
         in question
       </li>
-      <li>c. the member in question shall immediately cease promoting and advertising its relationship with ODI 
+      <li>the member in question shall immediately cease promoting and advertising its relationship with ODI 
         and distributing any materials referring to it; and
       </li>
-      <li>d. the member in question shall take all reasonable steps to ensure that third parties are not misled 
+      <li>the member in question shall take all reasonable steps to ensure that third parties are not misled 
         as to the current relationship with ODI by virtue of any materials that remain in the market place and 
         public domain.
       </li>
-    </ul>
+    </ol>
   </li>
 </ol>
 <h4>
@@ -336,27 +336,27 @@
 <ol>
   <li>This clause VII. sets out the entire financial liability of the parties (including any liability for 
     the acts or omissions of its employees, agents, consultants, and subcontractors) to the other in respect of:
-    <ul>
-      <li>a. any breach of these Terms &amp; Conditions;
+    <ol>
+      <li>any breach of these Terms &amp; Conditions;
       </li>
-      <li>b. any use made by any member of its membership of ODI; and
+      <li>any use made by any member of its membership of ODI; and
       </li>
-      <li>c. any representation, statement or tortious act or omission (including negligence) arising under or 
+      <li>any representation, statement or tortious act or omission (including negligence) arising under or 
         in connection with these Terms.
       </li>
-    </ul>
+    </ol>
   </li>
   <li>All warranties, conditions and other terms implied by statute or common law are, to the fullest extent 
     permitted by law, excluded.
   </li>
   <li>Nothing in these Terms &amp; Conditions limits or excludes the liability of ODI or the Member:
-    <ul>
-      <li>a. for death or personal injury resulting from negligence; or
+    <ol>
+      <li>for death or personal injury resulting from negligence; or
       </li>
-      <li>b. for any damage or liability incurred by the Member or ODI (as applicable) as a result of fraud or 
+      <li>for any damage or liability incurred by the Member or ODI (as applicable) as a result of fraud or 
         fraudulent misrepresentation by the other.
       </li>
-    </ul>
+    </ol>
   </li>
   <li>The parties shall not be liable for loss of profits; loss of business; depletion of goodwill and/or similar 
     losses; loss of anticipated savings; loss of goods; loss of contract; loss of use; loss of corruption of data 
