Update 'Join Us' text for Sponsor/Partner sign ups
Fixes #32

--- a/app/views/contact_requests/new.html.erb
+++ b/app/views/contact_requests/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Contact us</h1>
+<h1><%= @title %></h1>
 
 <p class="lead">
   We're delighted that you would like to join us at ODI. We'd love to talk to you to discuss 
