--- a/app/views/contact_requests/create.html.erb
+++ b/app/views/contact_requests/create.html.erb
@@ -1,4 +1,4 @@
-<h1>Thanks</h1>
+<h1>Thank you</h1>
 
 <p class="lead">
   Thanks for getting in touch. We'll give you a call soon to discuss how we can work together.
