Fixed missing quotes

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -2,7 +2,7 @@
 
 <p>We are delighted to have you join us at the Open Data Institute.</p>
 
-<p>We run a free to attend lecture series every Friday highlighting some of the awe inspiring work going on using Open Data - everything from data as art, through to the CTO of the World Bank giving a 'fireside chat' about his experience at the White House. You can register for upcoming talks here: <a href=http://www.theodi.org/lunchtime-lectures>http://www.theodi.org/lunchtime-lectures</a></p>
+<p>We run a free to attend lecture series every Friday highlighting some of the awe inspiring work going on using Open Data - everything from data as art, through to the CTO of the World Bank giving a 'fireside chat' about his experience at the White House. You can register for upcoming talks here: <a href="http://www.theodi.org/lunchtime-lectures">http://www.theodi.org/lunchtime-lectures</a></p>
 
 <p>Your membership number is <%= @resource.membership_number %></p>
 
