Highlight minimum/mandatory fields required on sign-up forms
Fixes #28

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,3 +30,10 @@
  #terms h5 {
    font-style: italic;
  }
+ 
+ .field_with_errors {
+     display:inline;
+     margin:0px;
+     padding:0px;
+ }
+ 
