--- a/app/views/contact_requests/new.html.erb
+++ b/app/views/contact_requests/new.html.erb
@@ -13,6 +13,7 @@
     <%= f.label :person_name, :class => 'control-label' %>
     <div class='controls'>
       <%= f.text_field :person_name, :class => 'input-xlarge' %>
+	  <span class="help-inline">(required)</span>
     </div>
   </div>
   
@@ -20,6 +21,7 @@
     <%= f.label :person_affiliation, :class => 'control-label' %>
     <div class='controls'>
       <%= f.text_field :person_affiliation, :class => 'input-xlarge' %>
+	  <span class="help-inline">(required)</span>
     </div>
   </div>
     
@@ -27,6 +29,7 @@
     <%= f.label :person_job_title, :class => 'control-label' %>
     <div class='controls'>
       <%= f.text_field :person_job_title, :class => 'input-xlarge' %>
+	  <span class="help-inline">(required)</span>
     </div>
   </div>
 
@@ -34,6 +37,7 @@
     <%= f.label :person_email, :class => 'control-label' %>
     <div class='controls'>
       <%= f.text_field :person_email, :class => 'input-xlarge' %>
+	  <span class="help-inline">(required)</span>
     </div>
   </div>
   
@@ -41,6 +45,7 @@
     <%= f.label :person_telephone, :class => 'control-label' %>
     <div class='controls'>
       <%= f.text_field :person_telephone, :class => 'input-xlarge' %>
+	  <span class="help-inline">(required)</span>
     </div>
   </div>
 
@@ -49,6 +54,7 @@
     <%= f.label :comment_text, :class => 'control-label' %>
     <div class='controls'>
       <%= f.text_area :comment_text, :rows => 5, :placeholder=>"What would you like to talk to us about?", :class => 'input-xxlarge' %>
+	  <span class="help-inline">(required)</span>
     </div>
   </div>
   
