--- a/app/views/contact_requests/create.html.erb
+++ b/app/views/contact_requests/create.html.erb
@@ -1,5 +1,5 @@
 <h1>Thank you</h1>
 
 <p class="lead">
-  Thanks for getting in touch. We'll give you a call soon to discuss how we can work together.
+  Thank you for getting in touch. We'll give you a call soon to discuss how we can work together.
 </p>
