--- a/app/views/contact_requests/create.html.erb
+++ b/app/views/contact_requests/create.html.erb
@@ -3,3 +3,5 @@
 <p class="lead">
   Thank you for getting in touch. We'll give you a call soon to discuss how we can work together.
 </p>
+
+<p><a href="http://www.theodi.org/join-us" class="btn btn-primary">Return to the ODI Membership page</a></p>
