Why not do both?
As per @tomheath's suggestion

--- a/app/views/contact_requests/create.html.erb
+++ b/app/views/contact_requests/create.html.erb
@@ -4,4 +4,4 @@
   Thank you for getting in touch. We'll give you a call soon to discuss how we can work together.
 </p>
 
-<p><a href="http://www.theodi.org/" class="btn btn-primary">Return to the ODI Homepage</a></p>
+<p><a href="http://www.theodi.org/join-us" class="btn btn-primary">Return to the ODI Membership page</a> <a href="http://www.theodi.org/" class="btn btn-primary">Visit the ODI Homepage</a></p>
