--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,5 +1,9 @@
 <h2>Edit your organisation profile</h2>
 
+<p class="lead">
+	Please add your organisation's details which will be added to our member directory once your membership is confirmed.
+</p>
+
 <%= error_messages(@organization) %>
 
 <%= form_for(@organization, :url => '/organizations', :html => {:class => 'form-horizontal', :multipart => true}) do |f| %>
@@ -7,14 +11,14 @@
 	<div class='control-group'>
 		<%= f.label :name, :class => 'control-label' %>
 		<div class='controls'>
-			<%= f.text_field :name, :class => 'input-xlarge' %>
+			<%= f.text_field :name, :class => 'input-xlarge', :required => 'required' %>
 		</div>
 	</div>
 
 	<div class='control-group'>
 		<%= f.label :description, :class => 'control-label' %>
 		<div class='controls'>
-			<%= f.text_area :description, :class => 'input-xlarge', :rows => '8', :maxlength => @organization.character_limit %>
+			<%= f.text_area :description, :class => 'input-xlarge', :rows => '8', :maxlength => @organization.character_limit, :required => 'required' %>
 			<span class="help-block" id="limit"><%= "Limit of #{@organization.character_limit} characters" %></span>
 			<script>
 			$(document).ready(function() {
