--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -37,7 +37,7 @@
 	<div class='control-group'>
 		<%= f.label :url, :class => 'control-label' %>
 		<div class='controls'>
-			<%= f.text_field :url, :class => 'input-xlarge' %>
+			<%= f.url_field :url, :class => 'input-xlarge' %>
 		</div>
 	</div>
 	
