Changed 'Submit' button on the edit page to 'Preview'

--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -54,7 +54,7 @@
 	<% end %>
 	
     <div class="form-actions">
-      <%= f.submit 'Submit', :class => 'btn btn-primary' %>
+      <%= f.submit 'Preview', :class => 'btn btn-primary' %>
     </div>
 
 <% end %>
