--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -1,20 +1,20 @@
 <div class='control-group'>
 	<%= f.label :name, :class => 'control-label' %>
 	<div class='controls'>
-		<%= f.text_field :name, :class => 'input-xlarge', :required => 'required' %>
+		<%= f.text_field :name, :class => 'input-xlarge', :required => 'required', :'data-bind' => 'value: name' %>
 	</div>
 </div>
 
 <div class='control-group'>
 	<%= f.label :description, :class => 'control-label' %>
 	<div class='controls'>
-		<%= f.text_area :description, :class => 'input-xlarge', :rows => '8', :maxlength => @organization.character_limit, :required => 'required' %>
+		<%= f.text_area :description, :class => 'input-xlarge', :rows => '8', :maxlength => @organization.character_limit, :required => 'required', :'data-bind' => 'value: description' %>
 		<span class="help-block" id="limit"><%= "Limit of #{@organization.character_limit} characters" %></span>
 		<script>
 		$(document).ready(function() {
-      var max = <%= "#{@organization.character_limit}" %> - $('#organization_description').val().replace(/(\r\n|\n|\r)/g,"  ").length
+      var max = <%= "#{@organization.character_limit}" %> - $('#member_organization_attributes_description').val().replace(/(\r\n|\n|\r)/g,"  ").length
 			$('#limit').html('<span id="remaining">'+ max +'</span> characters remaining');
-			$('#organization_description').keyup(function() {
+			$('#member_organization_attributes_description').keyup(function() {
         var max = <%= "#{@organization.character_limit}" %>
 				var len = $(this).val().replace(/(\r\n|\n|\r)/g,"  ").length;
 				var rem = max - len
@@ -28,7 +28,7 @@
 <div class='control-group'>
 	<%= f.label :url, :class => 'control-label' %>
 	<div class='controls'>
-		<%= f.url_field :url, :class => 'input-xlarge' %>
+		<%= f.url_field :url, :class => 'input-xlarge', :'data-bind' => 'value: url' %>
 	</div>
 </div>
 	
