--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -1,9 +1,26 @@
-<h2><%= organization.name %></h2>
+<div class='organization'>
 
-<%= simple_format(organization.description) %>
+  <h2<% if @preview %> data-bind="text: name"<% end %>><%= organization.name %></h2>
 
-<% unless organization.url.blank? %>
-  <ul>
-    <li><%= link_to "Visit website", organization.url, :id => 'organizationurl' %></li>
-  </ul>
-<% end %>
+  <i class='icon icon-home'></i> <a<% if @preview %> data-bind="text: url, attr: {href: url}"<% end %> href='<%= organization.url %>'><%= organization.url%></a>
+
+  <div class='organization-description'>
+    <% if @preview %>
+      <p data-bind="text: description"></p>
+    <% else %>
+      <%= simple_format(organization.description) %>
+    <% end %>
+  </div>
+
+  <% if @preview %>
+    <script type="text/javascript">
+        function OrganisationViewModel() {
+            this.name        = ko.observable("<%= organization.name %>");
+            this.description = ko.observable("<%= organization.description %>");
+            this.url         = ko.observable("<%= organization.url %>");
+        };
+        ko.applyBindings(new OrganisationViewModel());
+    </script>
+  <% end %>
+  
+</div>
