Remove preview action from member editing

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -76,7 +76,6 @@
   </fieldset>
 
   <div class="form-actions">
-    <%= f.submit "Preview", :id => 'preview', :class => 'btn btn-primary' %>
-    <%= f.submit "Save", :id => 'save', :class => 'btn' %>
+    <%= f.submit "Save", :id => 'save', :class => 'btn btn-primary' %>
   </div>
 <% end %>
