--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -37,7 +37,7 @@
 	<div class='control-group'>
 		<%= f.label :logo, :class => 'control-label' %>
 		<div class='controls'>
-			<%= f.file_field :logo %>
+			<%= f.file_field :logo, :accept => "image/*", :'data-bind' => "event: {change: updateImage}" %>
 			<%= f.hidden_field :logo_cache %>
 		</div>
 	</div>
