--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -2,9 +2,7 @@
 
   <h2<% if @preview %> data-bind="text: name"<% end %>><%= organization.name %></h2>
 
-  <div class='pull-right'>
-    <img src=''<% if @preview %> data-bind='attr: {src: imageSrc}'<% end %> />
-  </div>
+  <div class='organization-logo pull-right' <% if @preview %> data-bind='style: {backgroundImage: imageSrc}'<% end %>></div>
 
   <i class='icon icon-home'></i> <a<% if @preview %> data-bind="text: url, attr: {href: url}"<% end %> href='<%= organization.url %>'><%= organization.url%></a>
 
@@ -22,13 +20,13 @@
             this.name        = ko.observable("<%= organization.name %>");
             this.description = ko.observable("<%= organization.description %>");
             this.url         = ko.observable("<%= organization.url %>");
-            this.imageSrc    = ko.observable("http://placekitten.com/200/100");
+            this.imageSrc    = ko.observable("url(http://placekitten.com/1000/1000)");
             this.updateImage = function() {
               input = $('#member_organization_attributes_logo')[0]
               if (input.files[0] && window.FileReader) {
                 reader = new FileReader();
                 reader.onloadend = function( ){
-                    window.organisationPreview.imageSrc(this.result);
+                    window.organisationPreview.imageSrc("url("+this.result+")");
                 }
                 reader.readAsDataURL(input.files[0]);
               }
